services/ingress-wildcard-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "demo.moe.ph"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: echo-cluster-service
            port:
              number: 8080
